panoptic_front/src/assets/main.css
:root {
  --border-color: rgb(195, 207, 217)
}

.menu {
  font-size: 13px;
  height: 100vh;
  position: sticky;
  top: 0;
  width: 210px;
}

.menu b {
  font-size: 13px;
}

.menu h3,
.menu .h3 {
  font-size: 1.1rem;
  margin-left: 1rem;
}

.clickable:hover {
  cursor: pointer;
}

.bi-caret-right {
  display: inline-block;
  transition: 0.2s;
  margin-left: 1rem;
}

.bi-caret-right.expand {
  transform: rotate(90deg) !important;
}

.bi-caret-right.hide {
  transform: rotate(0deg) !important;
}

.menu {
  overflow-wrap: break-word;
}


.hover-light:hover {
  background-color: rgb(240, 240, 240) !important;
}

.label {
  font-size: 0.875rem;
  padding: 0.25rem 0.5rem;
  /* color: #212529; */
}

.smaller {
  font-size: 0.875rem;
  padding: 0.25rem 0rem;
  /* color: #212529; */
}

body {

  --text-color: rgb(41, 56, 69);


  min-height: 100vh;
  color: var(--text-color);
  background: var(--color-background);
  transition: color 0.5s, background-color 0.5s;
  line-height: 1.6;
  /* font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; */
  font-size: 15px;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: Inter, Din, Barlow, 'IBM Plex Sans', sans-serif !important;
  /* font-family: Helvetica !important; */
  /* font-style: italic; */
}

.property-item {
  padding: 5px;
  border-top: 1px solid var(--border-color);
}

.custom-hr {
  border-bottom: 1px solid rgb(195, 207, 217);
  margin: 0;
  padding: 0;
}

.tab-button {
  border: none;
  background-color: white;
  font-size: 13px;
  margin: 0px;
  padding: 0;
  color: rgb(41, 56, 69);
}

.tab-button.active {
  border-bottom: 1px solid rgb(74, 93, 107);
}

.tab-icon {
  border: none;
  background-color: white;
  font-size: 20px;
  line-height: 30px;
  margin: 0px;
  padding: 0;
  color: rgb(74, 93, 107)
}


.text-input {
  -webkit-appearance: none !important;
  -moz-appearance: none !important;
  appearance: none !important;
  border: 2px solid rgb(197, 206, 213);
  margin: 0;
  padding: 10px;
  /* margin-top: 1px; */
  height: 16px;
  /* line-height: 10px; */
  font-size: 10px;
  color: var(--text-color);

  width: 100%;
}

.text-input:focus {
  -webkit-appearance: none !important;
  -moz-appearance: none !important;
  appearance: none !important;
  outline-width: 0;
  border: 2px solid rgb(197, 206, 213);
  outline: none;
}


.tree {
  text-align: start;
  --spacing: 1.3rem;
  --radius: 30px;
  margin-bottom: 0;
}

.tree li {
  display: block;
  position: relative;
  margin-left: 0;
  padding-left: calc(2 * var(--spacing) - var(--radius) - 0px);
}

.tree ul {
  margin-left: calc(var(--radius) - var(--spacing));
  /* margin-left: 0; */
  padding-left: 0;
  margin-bottom: 0;
}

.tree ul li {
  border-left: 1px solid rgb(195, 207, 217);
}

.tree ul li:last-child {
  border-color: transparent;
}

.tree ul li::before {
  content: '';
  display: block;
  position: absolute;
  top: calc(var(--spacing) / -2);
  left: -1px;
  width: calc(var(--spacing) + 1px);
  height: calc(var(--spacing) + 3px);
  border: solid rgb(195, 207, 217);
  border-width: 0 0 1px 1px;
}

.tree summary {
  text-align: center;
  display: inline-block;
  position: relative;
  cursor: pointer;
  z-index: 10 !important;
  background-color: rgb(195, 207, 217);
  margin: 3px 0px 0px 0px;
  border-radius: 2px;
  padding: 0.2em 0.7em;
  /* min-width: 30px; */
  font-size: 10px;
  width: auto;
}

.tree summary::marker,
.tree summary::-webkit-details-marker {
  display: none;
}

.tree summary:focus {
  outline: none;
}

.tree summary:focus-visible {
  outline: 1px dotted #000;
}

.node {
  text-align: center;
  display: inline-block;
  position: relative;
  cursor: pointer;
  z-index: 10 !important;
  /* background-color: rgb(195, 207, 217); */
  /* margin: 3px 0px 0px 0px; */
  border-radius: 2px;
  /* padding: 0.2em 0.3em; */
  padding-left: 8px;
  padding-top: 2px;
  /* min-width: 30px; */
  font-size: 15px;
  width: auto;
}

